--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -8,6 +8,10 @@ on:
   schedule:
     - cron: 15 6 * * SUN
   workflow_dispatch:
+    inputs:
+      environment:
+        type: environment
+        required: true
 
 jobs:
   Build:
@@ -19,5 +23,44 @@ jobs:
           echo "Branch name : ${{ github.ref }}"
       - uses: actions/checkout@v4
       - run: ls
-      
-  
+  Test:
+    runs-on: ubuntu-latest
+    if: github.event_name == 'workflow_dispatch'
+    needs: Build
+    environment: Test
+    steps:
+      - run: echo "Testing..."
+
+  Load-Test:
+    runs-on: ubuntu-latest
+    if: github.event_name == 'workflow_dispatch'
+    needs: Build
+    environment: Load-Test
+    steps:
+      - run: |
+          echo "Testing..."
+          sleep 15
+
+  Production:
+    runs-on: ubuntu-latest
+    needs: [Test, Load-Test]
+    environment:
+      name: Production
+      url: https://writeabout.net
+    if: github.event.inputs.environment == 'Production'
+    steps:
+      - run: |
+          echo "Step 1 deploying"
+          sleep 10
+      - run: |
+          echo "Step 2 deploying"
+          sleep 10
+      - run: |
+          echo "Step 3 deploying"
+          sleep 10
+      - run: |
+          echo "Step 4 deploying"
+          sleep 10
+      - run: |
+          echo "Step 5 deploying"
+          sleep 10
